optimizacion de codigo en transactionController